[project]
name = "comfyui-alphavae"
version = "0.1.0"
description = "ComfyUI custom nodes for AlphaVAE — native RGBA transparent image generation using FLUX"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.38.0",
    "torch",
    "safetensors",
]

[project.urls]
Repository = "https://github.com/katsut/ComfyUI-AlphaVAE"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
